--- a/source/_posts/洋葱在烹饪中的作用.md
+++ b/source/_posts/洋葱在烹饪中的作用.md
@@ -44,9 +44,19 @@ tags: 烹饪
 >
 > [梅納反應跟焦糖化到底差在哪？一次搞懂原理與五種實用範例](https://nommagazine.com/)
 > 
+> 美拉德反应除了会产生焦糖化反应的风味之外，还会产生诸如香咸、花香、肉香、巧克力、蔬菜、土豆和泥土味。
+> 
 > 虽然洋葱确实含有天然蔗糖，烹煮时有助于产生金黄色泽与甜味，因此也存在焦糖化。但主要的褐变原因还是來自加热蛋白质与还原糖所致。当洋葱丝遇热，表面水分就开始蒸发，颜色渐转焦褐，数以百计的风味分子释出。
 > 
 > 美中食材的风味组成差异显著，视各种氨基酸的多寡占比而定。在炒焦化洋葱时，也可以加上些许苏打粉提升PH值，咸性会加强梅纳反应。
+>
+> [什么是美拉德反应?](https://www.zhihu.com/question/296534172)
+> 
+> 美拉德反应初期阶段反应包括还原糖的羰基碳首先遭到氨基氮上孤对电子的亲核加成，接着失去水和闭环二形成葡基胺，如果还有过量的还原糖存在，就能进一步形成二葡基胺。葡基胺再经过阿马道里重排而生成1－氨基－2－酮糖。美拉德反应初级阶段不引起褐变，也不产生香味，但其产物是产生极重要的不挥发性香味物质的前驱物。
+>
+> 在氨基酮糖和氨基醛糖等重要的不挥发性香味前驱物形成之后，美拉德反应变得更为复杂，阿马道里重排产物经过－消去机理脱水，在经过脱水脱掉氨基而生成3－脱氧己糖醛酮、奥苏烯糖和HMF 等，这些不同的化合物依次反应，开始形成无氮及含氮褐色可溶性化合物。
+> 
+> 高级美拉德反应阶段形成的众多活性中间体如葡萄糖酮醛、3－脱氧、3,4－二脱氧、HMF、二还原酮类、不饱和醛亚胺等等，又可继续与氨基酸反应，最终生成类黑精色素－－－褐色含氮色素，吡嗪和咪唑环等风味物质。此过程包括醇醛缩合、醛氨聚合、环化合反应等。
 
 在查洋葱时，很多文章都提到了"硫化物"，例如：
 
