--- a/source/_posts/洋葱在烹饪中的作用.md
+++ b/source/_posts/洋葱在烹饪中的作用.md
@@ -56,7 +56,7 @@ tags: 烹饪
 >
 > 在氨基酮糖和氨基醛糖等重要的不挥发性香味前驱物形成之后，美拉德反应变得更为复杂，阿马道里重排产物经过－消去机理脱水，在经过脱水脱掉氨基而生成3－脱氧己糖醛酮、奥苏烯糖和HMF 等，这些不同的化合物依次反应，开始形成无氮及含氮褐色可溶性化合物。
 > 
-> 高级美拉德反应阶段形成的众多活性中间体如葡萄糖酮醛、3－脱氧、3,4－二脱氧、HMF、二还原酮类、不饱和醛亚胺等等，又可继续与氨基酸反应，最终生成类黑精色素－－－褐色含氮色素，吡嗪和咪唑环等风味物质。此过程包括醇醛缩合、醛氨聚合、环化合反应等。
+> 高级美拉德反应阶段形成的众多活性中间体如葡萄糖酮醛、3－脱氧、3,4－二脱氧、HMF、二还原酮类、不饱和醛亚胺等等，又可继续与氨基酸反应，最终生成类黑精色素，褐色含氮色素，吡嗪和咪唑环等风味物质。此过程包括醇醛缩合、醛氨聚合、环化合反应等。
 
 在查洋葱时，很多文章都提到了"硫化物"，例如：
 
