--- a/source/_posts/鱼人宝宝都能看懂的个人博客搭建攻略.md
+++ b/source/_posts/鱼人宝宝都能看懂的个人博客搭建攻略.md
@@ -205,6 +205,21 @@ hidden: true
 
 每次在电脑B或电脑A编辑之后，除了使用 `hexo d` 提交网页内容外，还要记得使用 `git push` 提交更新后的框架内容
 
+## Windows使用遇到的问题
+1. 提示“无法加载文件hexo.ps1，因为在此系统上禁止运行脚本转载”
+
+> 是Windows10下的策略设置问题，用管理员方式打开PowerShell（搜索PowerShell后选择管理员打开）并执行
+> > set-ExecutionPolicy RemoteSigned  输入Y
+> 
+> 即可
+
+2. 提示“Cannot find module 'hexo' from...”
+
+> 安装包的问题，可能是误删了什么地方的东西，运行
+> > npm install hexo --save
+> 
+> 即可
+
 ## 参考文章
 
 [快速搭建个人博客 —— 保姆级教程](https://pdpeng.github.io/2022/01/19/setup-personal-blog/)
