新增分类页面和阅读更多

--- a/source/_posts/鱼人宝宝都能看懂的个人博客搭建攻略.md
+++ b/source/_posts/鱼人宝宝都能看懂的个人博客搭建攻略.md
@@ -16,6 +16,8 @@ tags: HEXO
 
 考虑到主要目的是将知识库做好分类，并且保存到一个看起来不太会丢的地方，不需要各种各样的多媒体内容，大多是文字的东西，好像建个站更方便一些。
 
+<!--more-->
+
 ## 技术选型
 
 首先没有什么经验，先上知乎搜了下大概的技术类型，这篇文章讲的比较详细
@@ -224,6 +226,19 @@ hidden: true
 
 3. hexo g后提示“NO LAYOUT”
 > 确认主题是否还在themes文件夹下，可能被误删了
+
+4. 开启分类页面之后无法生成分类的首页 Cannot GET /categories/
+> 首先要给分类页面建一个首页，运行
+> > hexo new page "categories"
+> 
+> 然后再source目录下找到新建的categories文件夹，找到里边的index.md文件，添加对应的type
+> > title: categories
+> > 
+> > date: xxxx-xx-xx xx:xx:xx
+> >
+> > type: "categories"
+> 
+> 即可
 
 ## 参考文章
 
