--- a/source/_posts/鱼人宝宝都能看懂的个人博客搭建攻略.md
+++ b/source/_posts/鱼人宝宝都能看懂的个人博客搭建攻略.md
@@ -240,6 +240,12 @@ hidden: true
 > 
 > 即可
 
+5. 开启阅读统计
+> next主题下的配置文件中，设置busuanzi_count.enable: true即可
+
+6. 开启百度统计
+> 在百度统计中添加网站首页信息，在next主题下的配置文件中，设置baidu_analytics: xxx（xxx为百度统计提供的hm.baidu.com/hm?js后边的内容）
+
 ## 参考文章
 
 [快速搭建个人博客 —— 保姆级教程](https://pdpeng.github.io/2022/01/19/setup-personal-blog/)
