--- a/source/_posts/鱼人宝宝都能看懂的微信公众号开发攻略.md
+++ b/source/_posts/鱼人宝宝都能看懂的微信公众号开发攻略.md
@@ -52,14 +52,14 @@ def wechat():
     echostr = request.args.get('echostr')
 
     if not all([signature, timestamp, nonce, echostr]):
-        abort(400)  # 如果没有则返回400相应
+        abort(400)  # 如果没有则返回400响应
     
     temp = [WECHAT_TOKEN, timestamp, nonce]  # 按要求生成列表
     temp.sort()  # 按要求排序
     temp = ''.join(temp)
     sign = hashlib.sha1(temp.encode('utf8')).hexdigest()  # 按要求加密
     if signature != sign:
-        abort(403)  # 如果不一致则返回403相应
+        abort(403)  # 如果不一致则返回403响应
     else:
         return echostr  # 按要求返回
 
@@ -74,22 +74,23 @@ if __name__ == '__main__':
 要注意的点是`sudo python3`和虚拟环境下的`python3`对应的sys.path不同问题需要处理
 
 ```bash
- 如果需要用sudo python来执行，比如flask，就把python的路径邪道sudo python的路径底下
-# python命令的执行路径
-# python -> import sys -> sys.path
-['', '/home/dy/miniconda3/envs/gzh/lib/python39.zip', '/home/dy/miniconda3/envs/gzh/lib/python3.9', '/home/dy/miniconda3/envs/gzh/lib/python3.9/lib-dynload', '/home/dy/miniconda3/envs/gzh/lib/python3.9/site-packages']# sudo python命令的执行路径
+# 如果需要用sudo python3来执行，比如flask，就把python3的路径写到sudo python3的路径底下
+# python3命令的执行路径
+# python3 -> import sys -> sys.path
+['', '/home/xz/miniconda3/envs/gzh/lib/python3.9/site-packages']  
+# sudo python3命令的执行路径
 # sudo python3 -> import sys -> sys.path
-['', '/usr/lib/python39.zip', '/usr/lib/python3.9', '/usr/lib/python3.9/lib-dynload', '/usr/local/lib/python3.9/dist-packages', '/usr/lib/python3/dist-packages']
-# 将python命令的路径内容放到一个.pth文件中
+['', '/usr/lib/python3/dist-packages']
+# 将python3命令的路径内容放到一个.pth文件中
 vim userpathonpath.pth
-# /home/dy/miniconda3/envs/gzh/lib/python39.zip
-# 一行一个把python的路径写到文件里
+# /home/xz/miniconda3/envs/gzh/lib/python3.9/site-packages
+# 一行一个把python3的路径写到文件里，一行一个，不需要引号
 # 然后把文件copy到sudo python3的路径下
 sudo cp userpathonpath.pth /usr/lib/python3/dist-packages/userpathonpath.pth
 
-# 这样sudo python在寻找路径的时候就会遍历.pth文件中的路径
+# 这样sudo python3在寻找路径的时候就会遍历.pth文件中的路径
 # sudo python3 -> import sys -> sys.path
-['', '/usr/lib/python39.zip', '/usr/lib/python3.9', '/usr/lib/python3.9/lib-dynload', '/usr/local/lib/python3.9/dist-packages', '/usr/lib/python3/dist-packages', '/home/dy/miniconda3/envs/gzh/lib/python3.9', '/home/dy/miniconda3/envs/gzh/lib/python3.9/lib-dynload', '/home/dy/miniconda3/envs/gzh/lib/python3.9/site-packages']
+['', '/usr/lib/python3/dist-packages', '/home/xz/miniconda3/envs/gzh/lib/python3.9/site-packages']
 ```
 
 另外公众号端也需要一些配置
