--- a/source/_posts/鱼人宝宝都能看懂的微信公众号开发攻略.md
+++ b/source/_posts/鱼人宝宝都能看懂的微信公众号开发攻略.md
@@ -174,6 +174,17 @@ if __name__ == '__main__':
 
 到这里基本的收发信息就处理好了，其实也就足以做一些基本功能的开发了
 
+### Nginx相关
+
+由于Nginx默认端口是80，如果不做配置的话，这个服务因为端口冲突就会无法启动，后续把Nginx搞明白再做端口变更，现在先去Nginx目录下停止服务
+
+```bash
+whereis nginx
+# /usr/sbin/nginx
+cd /usr/sbin/
+./nginx -s stop
+```
+
 ## 第二步：读写数据库
 
 实现这样一个需求：
