--- a/source/_posts/鱼人宝宝都能看懂的苹果日历订阅源开发攻略.md
+++ b/source/_posts/鱼人宝宝都能看懂的苹果日历订阅源开发攻略.md
@@ -215,7 +215,7 @@ def mk_ics_file(the_type):
     fname = pwd+"calendar%s.ics"%the_type
     header = return_ics_header(the_type)
     ics_event = ''
-    conn = psycopg2.connect(database='dy',user='dy',password='qwe1234qwe',host='127.0.0.1',port='5432')
+    conn = psycopg2.connect(database='x',user='x',password='x',host='127.0.0.1',port='5432')
     cursor = conn.cursor()
     cursor.execute("SELECT the_date, mark FROM calendar_data WHERE the_type = '%s'"%the_type)
     result = cursor.fetchall()
