--- a/source/_posts/个人博客搭建攻略.md
+++ b/source/_posts/个人博客搭建攻略.md
@@ -1,8 +1,8 @@
 ---
-title: 鱼人宝宝都能看懂的个人博客搭建攻略
+title: 个人博客搭建攻略
 date: 2023-03-09 15:17:10
-categories: 实践
-tags: HEXO
+categories: [小项目, 博客搭建]
+tags: [实践]
 ---
 ## 闲言碎语
 
