--- a/source/_posts/微信公众号开发.md
+++ b/source/_posts/微信公众号开发.md
@@ -1,8 +1,8 @@
 ---
-title: 鱼人宝宝都能看懂的微信公众号开发攻略
+title: 微信公众号开发
 date: 2023-08-20 15:17:10
-categories: [实践]
-tags: [微信公众号]
+categories: [小项目, 微信公众号]
+tags: [实践]
 ---
 ## 闲言碎语
 
@@ -195,4 +195,154 @@ cd /usr/sbin/
 
 管理员可以发送特殊格式的消息来向数据库中写入数据
 
+### 需求细化
 
+1. 判断用户消息是否文本
+2. 用，分割后，判断第一部分是否su
+3. 如果是su，则第二部分为name，第三部分为url，不需要返回
+4. 如果不是su，则第二部分为name，需要查询，然后返回url
+
+### PostgreSQL配置
+
+```bash
+sudo apt-get update
+sudo apt-get install postgresql postgresql-client
+# 安装好后会默认创建postgres用户
+sudo -u postgres -i  # 进入postgres这个用户权限下
+psql  # 登入PostgreSQL
+# SELECT * FROM pg_user;  # 可以查看所有用户的信息
+# CREATE USER <username> superuser;  # 创建新用户并且给超级管理权限
+# ALTER USER <username> superuser;  # 给对应用户超级管理权限
+# ALTER USER <username> WITH PASSWORD 'xxx';  # 修改密码
+# CREATE DATABASE <databasename>;  # 创建数据库
+
+# 切换到对应与用户下创建表
+# CREATE TABLE movie_info(
+# name TEXT,
+# url TEXT
+# );
+
+# \d 查看已经建好的表
+# \q 退出
+
+pip install psycopg2  # 安装Python操作PostgreSQL包
+# 如果出现ERROR: Could not build wheels for psycopg2, which is required to install pyproject.toml-based projects
+# 则执行
+sudo apt-get install libpq-dev python3-dev
+# 安装后在python环境导入import psycopg2测试
+# 如果出现ImportError: no pq wrapper available则执行
+pip install "psycopg[binary,pool]"
+# 如果出现undefined symbol: ffi_type_pointer, version LIBFFI_BASE_7.0则执行
+conda install libffi==3.3
+```
+
+### 修改脚本
+
+连接PostgreSQL
+```python
+import psycopg2
+conn = psycopg2.connect(database='x',user='x',password='x',host='127.0.0.1',port='5432')
+cursor = conn.cursor()
+
+# 查询
+cursor.execute('SELECT * FROM x')
+result = cursor.fetchall()
+print(result)
+
+# 插入
+cursor.execite("""INSERT INTO x(col1, col2) VALUES('x', 'x')""")
+conn.commit()
+
+conn.close()  # 关闭连接
+```
+
+服务脚本
+```python
+# -*- coding: utf-8 -*-
+
+from flask import Flask, request, make_response
+import hashlib
+import xmltodict
+import time
+import psycopg2
+
+app = Flask(__name__)
+
+@app.route('/wechat',methods=['GET','POST'])
+def index():
+    if request.method =='GET':
+        # 设置token,开发者配置中心使用
+        token = 'x'
+
+        # 获取微信服务器发送过来的参数
+        data = request.args
+        signature = data.get('signature')
+        timestamp = data.get('timestamp')
+        nonce = data.get('nonce')
+        echostr = data.get('echostr')
+
+        # 对参数进行字典排序，拼接字符串
+        temp = [timestamp, nonce, token]
+        temp.sort()
+        temp = ''.join(temp)
+
+        # 加密
+        if (hashlib.sha1(temp.encode('utf8')).hexdigest() == signature):
+            return echostr
+        else:
+            return 'error', 403
+
+    # 根据请求方式进行判断
+    if request.method == 'POST':
+        # 获取微信服务器post过来的xml数据
+        xml = request.data
+        # 把xml格式的数据进行处理，转换成字典进行取值
+        req = xmltodict.parse(xml)['xml']
+        # 判断post过来的数据中数据类型是不是文本
+        if 'text' == req.get('MsgType'):
+            # 连接数据库
+            conn = psycopg2.connect(database='x',user='x',password='x',host='127.0.0.1',port='5432')
+            cursor = conn.cursor()
+            # 判断内容是要执行插入还是查询
+            content = req.get('Content')
+            content_list = content.split('，')
+            if content_list[0] == 'x':
+                # 插入信息
+                cursor.execute("""INSERT INTO x(x, x) VALUES('%s', '%s')"""%(content_list[1], content_list[2]))
+                conn.commit()
+                result = '写入完成'
+            else:
+                # 查询信息
+                cursor.execute("SELECT x FROM x WHERE x = '%s'"%content_list[0])
+                result = cursor.fetchall()
+                if result == []:
+                    result = 'xxx'
+                else:
+                    result = result[0][0]
+        
+            # 获取用户的信息，开始构造返回数据，把用户发送的信息原封不动的返回过去，字典格式
+            resp = {
+                'ToUserName':req.get('FromUserName'),
+                'FromUserName':req.get('ToUserName'),
+                'CreateTime':int(time.time()),
+                'MsgType':'text',
+                'Content':result
+            }
+            # 把构造的字典转换成xml格式
+            xml = xmltodict.unparse({'xml':resp})
+            # 返回数据
+            return xml
+        else:
+            resp = {
+                'ToUserName': req.get('FromUserName', ''),
+                'FromUserName': req.get('ToUserName', ''),
+                'CreateTime': int(time.time()),
+                'MsgType': 'text',
+                'Content': '无法识别该消息类型'
+            }
+            xml = xmltodict.unparse({'xml':resp})
+            return xml
+
+if __name__ == '__main__':
+    app.run(host='0.0.0.0', port=80, debug=True)
+```
