--- a/source/_posts/梯子搭建攻略.md
+++ b/source/_posts/梯子搭建攻略.md
@@ -1,8 +1,8 @@
 ---
-title: 鱼人宝宝都能看懂的梯子搭建攻略
+title: 梯子搭建攻略
 date: 2023-06-30 16:17:16
-categories: 实践
-tags: VPN
+categories: [小项目, 搭梯子]
+tags: [实践]
 ---
 ## 闲言碎语
 
@@ -83,5 +83,3 @@ v2ray add ss  # 添加一个Shadowsocks配置
 
 # 如果已有Shadowrocket等Shadowsocks客户端，添加对应URL或者配置信息即可
 ```
-
-
