--- a/source/_posts/苹果日历订阅源开发.md
+++ b/source/_posts/苹果日历订阅源开发.md
@@ -1,8 +1,8 @@
 ---
-title: 鱼人宝宝都能看懂的苹果日历订阅源开发攻略
+title: 苹果日历订阅源开发
 date: 2023-08-26 16:47:10
-categories: [实践]
-tags: [iOS]
+categories: [小项目, 日历订阅]
+tags: [实践]
 ---
 ## 闲言碎语
 
@@ -238,6 +238,7 @@ def mk_ics_file(the_type):
 坑了一个小时的一个点：头文件中VERSION必须是2.0
 
 订阅地址：
+(服务器没再续了，就这吧)
 ```bash
 假期：https://raw.githubusercontent.com/Dangyoo/my_calendar/master/calendar1.ics
 调休：https://raw.githubusercontent.com/Dangyoo/my_calendar/master/calendar2.ics
